Updated index.html with projects section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,9 +9,24 @@
     <header>
         <h1>Welcome to My Portfolio!</h1>
     </header>
+
     <section>
         <h2>About Me</h2>
-        <p>Short introduction about your skills and experience.</p>
+        <p>I am passionate about coding, data science, and AI. This portfolio showcases my work.</p>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="projects/project1.ipynb">Data Analysis in Python</a></li>
+            <li><a href="projects/project2.ipynb">Machine Learning Model</a></li>
+            <li><a href="projects/project3.ipynb">Web Scraping with Python</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Feel free to reach out via <a href="mailto:baobob80@gmail.com">email</a> or <a href="https://github.com/Baobob80">GitHub</a>.</p>
     </section>
 </body>
 </html>
