Fixed duplicate projects and contact section

--- a/index.html
+++ b/index.html
@@ -20,18 +20,11 @@
 
     <section>
         <h2>Projects</h2>
-        <div class="project">
-            <img src="images/project1.jpg" alt="Data Analysis in Python">
-            <p><a href="projects/project1.ipynb">Data Analysis in Python</a></p>
-        </div>
-        <div class="project">
-            <img src="images/project2.jpg" alt="Machine Learning Model">
-            <p><a href="projects/project2.ipynb">Machine Learning Model</a></p>
-        </div>
-        <div class="project">
-            <img src="images/project3.jpg" alt="Web Scraping with Python">
-            <p><a href="projects/project3.ipynb">Web Scraping with Python</a></p>
-        </div>
+        <ul>
+            <li><a href="projects/project1.ipynb">Data Analysis in Python</a></li>
+            <li><a href="projects/project2.ipynb">Machine Learning Model</a></li>
+            <li><a href="projects/project3.ipynb">Web Scraping with Python</a></li>
+        </ul>
     </section>
 
     <section>
